--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,8 +39,18 @@ body {
   justify-content: center;
   font-size: 2rem;
 }
-.App .file-status .controls progress {
+.App .file-status .controls .control-msg-progress {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.App .file-status .controls .control-msg-progress .status-msg {
+  font-size: 1rem;
+}
+.App .file-status .controls .control-msg-progress progress {
   min-width: 3rem;
+  margin-bottom: 0;
 }
 .footer {
   color: #888;
